src/objects/Store__c.object
<CustomObject>
    <description>One Brand can have many Stores.</description>
    <fields>
        <fullName>Brand_Id__c</fullName>
        <label>Brand Id</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Stores</relationshipLabel>
        <relationshipName>Stores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GeoLocations__c</fullName>
        <label>Geo Locations</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>mysql db</inlineHelpText>
        <label>Store ID</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Street_1__c</fullName>
        <label>Street 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip / Postal Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mid__c</fullName>
        <externalId>true</externalId>
        <label>mid</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <label>Store</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>mid__c</columns>
        <columns>URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Store Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>